--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -24,13 +24,16 @@
         padding-left: $margin;
         padding-right: $margin;
         @include mobile { 
-            padding-left: 0;
+            padding-left: 0 !important;
         }
     }
     .fixed-header{
         background-color: white;
         padding-bottom: 0.5em;
+        width: 100% !important;
         @include mobile { 
+            background-color: white;
+            width: 100% !important;
             font-size: $fontSizeMobile;
         }
         .speedboat {
