--- a/src/components/VideoBlock/VideoBlock.scss
+++ b/src/components/VideoBlock/VideoBlock.scss
@@ -1,13 +1,5 @@
 @import "../../styles/styles.scss";
 
-@mixin mobile {
-    @media (max-width: 899px) { @content; }
-}
-
-@mixin tab {
-    @media (max-width: 1280px) { @content; }
-}
-
 .video-block-container {
     margin-top: $buffer*2;
     padding-top: 0; //$paddingTop;
@@ -15,9 +7,4 @@
     width: 100%;
     background: $bgColor;
     overflow: hidden;
-
-    @include mobile { 
-        height: 100px !important;
-        width: 100px !important;
-    }
 }
