--- a/src/components/VideoItem/VideoItem.scss
+++ b/src/components/VideoItem/VideoItem.scss
@@ -12,7 +12,7 @@
     position: relative;
     .video-element {
         min-width: 100% !important;
-        height: 60vh !important;
+        height: 50vh !important;
         video {
             min-width: 100% !important;
             min-height: 100% !important;
